tool/src/js/snapshots/diplomat_tool__js__structs__tests__method_returning_struct@ffi.rst.snap
---
source: tool/src/js/structs.rs
expression: out_docs.get(out).unwrap()
---
``ffi``
=======

.. js:class:: MyStruct

    .. js:function:: get_non_opaque()

.. js:class:: NonOpaqueStruct

    .. js:attribute:: a

    .. js:attribute:: b

    .. js:attribute:: c

