tool/src/js/snapshots/diplomat_tool__js__structs__tests__method_write_out@ffi.rst.snap
---
source: tool/src/js/structs.rs
expression: out_docs.get(out).unwrap()
---
``ffi``
=======

.. js:class:: MyStruct

    .. js:method:: write()

    .. js:method:: write_unit()

    .. js:method:: write_result()
