tool/src/js/snapshots/diplomat_tool__js__structs__tests__method_write_out@index.rst.snap
---
source: tool/src/js/structs.rs
expression: out_docs.get(out).unwrap()
---
Documentation
=============

.. toctree::
   :maxdepth: 3
   :caption: Modules:

   ffi

Indices and tables
==================

* :ref:`genindex`
* :ref:`search`
