tool/src/js/snapshots/diplomat_tool__js__structs__tests__method_writeable_out@ffi.rst.snap
---
source: tool/src/js/structs.rs
expression: out_docs.get(out).unwrap()
---
``ffi``
=======

.. js:class:: MyStruct

    .. js:function:: write()

    .. js:function:: write_unit()

    .. js:function:: write_result()

