tool/src/js/snapshots/diplomat_tool__js__structs__tests__simple_opaque_struct@ffi.rst.snap
---
source: tool/src/js/structs.rs
expression: out_docs.get(out).unwrap()
---
``ffi``
=======

.. js:class:: MyStruct

    .. js:function:: new(a, b)

    .. js:method:: get_a()

    .. js:method:: set_b(b)

